test/visibility/import/enablesUnqualified/useAndImport-useOnlyNothing2d.good
useAndImport-useOnlyNothing2d.chpl:22: In function 'main':
useAndImport-useOnlyNothing2d.chpl:23: error: unresolved call 'foo()'
useAndImport-useOnlyNothing2d.chpl:23: note: because no functions named foo found in scope
